Fixed button bug, spacing for cards

--- a/styles.css
+++ b/styles.css
@@ -64,8 +64,12 @@ body {
   float: right;
   position: -webkit-sticky;
   position: sticky;
-  bottom: 20;
-  margin-right: 32px;
+  bottom: 10px;
+  margin-right: 30px;
   background-color: var(--paleChestnut);
+  margin-bottom: 10px;
 }
 
+.date, .prompt-title, .answer{
+    margin-bottom: .5rem;
+}
